--- a/src/partials/teacher.html
+++ b/src/partials/teacher.html
@@ -17,19 +17,19 @@
             <li class="teacher-skills">
                 <p class="teacher-text">
                     <svg class="teacher-icon" width="24" height="14">
-                        <use href="./images/sprite1.svg#check"></use>
+                        <use href="./images/sprite.svg#check1"></use>
                     </svg>Опыт подготовки учеников к ВНО - 6 лет</p>
             </li>
             <li class="teacher-skills">
                 <p class="teacher-text">
                     <svg class="teacher-icon" width="24" height="14">
-                        <use href="./images/sprite1.svg#check"></use>
+                        <use href="./images/sprite.svg#check1"></use>
                     </svg>Собственный результат сдачи ВНО - 197 баллов 2 года подряд</p>
             </li>
             <li class="teacher-skills">
                 <p class="teacher-text">
                     <svg class="teacher-icon" width="24" height="14">
-                        <use href="./images/sprite1.svg#check"></use>
+                        <use href="./images/sprite.svg#check1"></use>
                     </svg>Сдала на отлично международный аналог ВНО - Кембриджский PET (Preliminary English Test)</p>   
             </li>
         </ul>
@@ -45,5 +45,5 @@
         </p>
         <a class="teacher-certificate" href="/">Cambrige English Entry Level Certificate</a>
        </div>
-    </div>
-    </section>
+</div>
+</section>
