--- a/src/sass/layout/_we-promise.scss
+++ b/src/sass/layout/_we-promise.scss
@@ -1,110 +1,123 @@
 .we-promise {
-  &-wrapper {
-    width: 100%;
-    padding-top: 30px;
-    padding-bottom: 30px;
-    background-color: var(--grey-background);
-    @media screen and (min-width: 768px) {
-      padding-top: 30px;
-      padding-bottom: 30px;
-    }
-    @media screen and (min-width: 1344px) {
-      padding-top: 50px;
-      padding-bottom: 50px;
-    }
-  }
-  &-title {
-    font-style: normal;
-    line-height: 130%;
-    text-align: center;
-    letter-spacing: 0.03em;
+  padding-top: 50px;
 
-    color: var(--main-color);
-    @media screen and (max-width: 767px) {
-      height: 31px;
-      font-size: 26px;
-      margin-bottom: 30px;
-    }
-    @media screen and (min-width: 768px) {
-      font-size: 26px;
-      margin-bottom: 30px;
-    }
-    @media screen and (min-width: 1344px) {
-      margin-bottom: 50px;
-      font-weight: 800;
-      font-size: 46px;
-    }
-  }
-  &-color {
-    color: var(--orange-color);
-  }
-  &-list {
-    padding-left: 55px;
-    padding-right: 20px;
-    position: relative;
-
-    @media screen and (min-width: 768px) {
-      padding-left: 80px;
-    }
-    @media screen and (min-width: 1344px) {
-      padding-left: 112px;
-      padding-right: 112px;
-    }
-  }
-  &-item {
-    font-style: normal;
-    font-weight: 500;
-    color: #3d3d3d;
-
-    padding-left: 24px;
-  
-
-    @media screen and (max-width: 767px) {
-      padding-left: 26px;
-      font-size: 12px;
-      line-height: 1.666;
-      &:not(:last-child) {
-        padding-bottom: 23px;
-      }
-    }
-    @media screen and (min-width: 768px) {
-      padding-left: 37px;
-      font-size: 12px;
-      &:not(:last-child) {
-        padding-bottom: 20px;
-      }
-    }
-
-    @media screen and (min-width: 1344px) {
-      padding-left: 30px;
-      font-size: 20px;
-      line-height: 1.4;
-    }
+  @media screen and (min-width: 1344px) {
+    padding-top: 130px;
   }
 }
-.we-promise-item:not(:last-child) {
-  border-left: 1px dashed var(--grey-color);
-}
 
-.we-promise-item::before {
-  content: '';
-  width: 14px;
-  height: 20px;
-  background-image: url('../images/campfire.svg');
-  background-repeat: no-repeat;
-  position: absolute;
-  left: 45px;
-  
-  
+.we-promise-title {
+  margin-bottom: 30px;
+  text-align: center;
+  font-family: Montserrat;
+  font-weight: 800;
+  font-size: 26px;
+  line-height: 26px;
+  letter-spacing: 0.03em;
+
+  color: var(--main-color);
 
   @media screen and (min-width: 768px) {
-  left: 72px;
+    font-size: 24px;
+    line-height: 34px;
   }
 
   @media screen and (min-width: 1344px) {
-    left: 103px;
-    width: 22px;
-    height: 29px;
+    margin-bottom: 50px;
+    font-size: 46px;
+    line-height: 60px;
   }
 }
 
+.we-promise-list {
+  padding: 30px 20px;
+  margin-left: -20px;
+  margin-right: -20px;
+  background-color: var(--grey-background);
+
+  @media screen and (min-width: 768px) {
+    width: 688px;
+    margin: 0 auto;
+    padding: 30px 50px 30px 79px;
+  }
+
+  @media screen and (min-width: 1344px) {
+    width: 1314px;
+    padding: 50px 112px 45px;
+  }
+}
+
+.we-promise-list-item {
+  position: relative;
+  padding-left: 35px;
+
+  @media screen and (min-width: 768px) {
+    padding-left: 39px;
+  }
+
+  @media screen and (min-width: 1680px) {
+    padding-left: 52px;
+  }
+}
+
+.we-promise-list-item:not(:last-child) {
+  margin-bottom: 23px;
+
+  @media screen and (min-width: 768px) {
+    margin-bottom: 20px;
+  }
+}
+
+.we-promise-list-item::before {
+  position: absolute;
+  content: '';
+  width: 15px;
+  height: 20px;
+  top: 0;
+  left: 0;
+  background: url('../images/campfire.svg');
+  background-size: contain;
+
+  @media screen and (min-width: 1344px) {
+    width: 22px;
+    height: 30px;
+  }
+}
+
+.we-promise-list-item:not(:last-child)::after {
+  position: absolute;
+  content: '';
+  width: 1px;
+  height: 68px;
+  top: 25px;
+  left: 7px;
+  background-image: url('../images/line.svg');
+
+  @media screen and (min-width: 768px) {
+    height: 30px;
+  }
+
+  @media screen and (min-width: 1680px) {
+    height: 40px;
+    top: 34px;
+    left: 11px;
+  }
+}
+
+.we-promise-text {
+  font-family: Montserrat;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 20px;
+
+  color: var(--p-text-g-color);
+
+  @media screen and (min-width: 1344px) {
+    font-size: 20px;
+    line-height: 28px;
+  }
+}
+
+.we-promise-color {
+  color: var(--orange-color);
+}
