--- a/src/partials/we-promise.html
+++ b/src/partials/we-promise.html
@@ -1,30 +1,28 @@
-  
-<section class="we-promise-section">
-    <div class="container">
-      <h2 class="we-promise-title">Мы гарантируем</h2>
-      <div class="we-promise-wrapper">
-        <ul class="we-promise-list list">
-          <li class="we-promise-item">
-            Ты сдашь ВНО минимум на 25 баллов лучше, чем на первом пробном
+<section class="we-promise">
+  <div class="container">
+    <h2 class="we-promise-title">Мы гарантируем</h2>
+      <ul class="we-promise-list list">
+        <li class="we-promise-list-item">
+            <p class="we-promise-text">Ты сдашь ВНО минимум на 25 баллов лучше, чем на первом пробном
             тестировании. Иначе мы вернем деньги.<span class="we-promise-color"
-              >*</span
-            >
-          </li>
-          <li class="we-promise-item">
-            Ты научишься писать сочинения минимум на 10 баллов из 14.
-            <span class="we-promise-color">
-              В то время как 20% учеников получили за сочинение 0.</span
-            >
-          </li>
-          <li class="we-promise-item">
-            Ты будешь заниматься в своем районе. Мы выберем место проведения
+              >*</span>
+            </p>
+        </li>
+        <li class="we-promise-list-item">
+            <p class="we-promise-text">Ты научишься писать сочинения минимум на 10 баллов из 14.
+            <span class="we-promise-color">В то время как 20% учеников получили за сочинение 0.</span>
+          </p>
+        </li>
+        <li class="we-promise-list-item">
+            <p class="we-promise-text">Ты будешь заниматься в своем районе. Мы выберем место проведения
             занятий после формирования команд.
-          </li>
-          <li class="we-promise-item">
-            Команды будут сформированы, исходя из начального уровня учеников. Мы
+          </p>
+        </li>
+        <li class="we-promise-list-item">
+            <p class="we-promise-text">Команды будут сформированы, исходя из начального уровня учеников. Мы
             учитываем особенности каждого ученика.
-          </li>
-        </ul>
-      </div>
-    </div>
-  </section>
+          </p>
+        </li>
+      </ul>
+  </div>
+</section>
