--- a/src/sass/components/_form.scss
+++ b/src/sass/components/_form.scss
@@ -1,4 +1,3 @@
-
 .form {
   background-image: url('../Images/Hero/Form/bg-mobile.png');
   background-color: rgba(17, 21, 24, 1);
@@ -22,7 +21,6 @@
     background-repeat: no-repeat;
     background-size: cover;
   }
-
 }
 
 @media screen and (min-device-pixel-ratio: 2) and (min-width: 768px),
@@ -127,7 +125,9 @@
   letter-spacing: 0.08em;
   color: rgb(255, 255, 255);
   background-color: var(--accent-color);
-  border: none;
+  border: 3px solid transparent;
+  transition: color 250ms var(--timing-fn),
+    background-color 250ms var(--timing-fn), border-color 250ms var(--timing-fn);
 }
 
 .form-button:hover,
@@ -135,6 +135,7 @@
   border-color: var(--accent-color);
   background-color: rgb(255, 255, 255);
   color: var(--accent-color);
+  border: 3px solid var(--accent-color);
 }
 
 @media screen and (min-width: 768px) {
@@ -220,5 +221,3 @@
     padding-left: 31px;
   }
 }
-
-
