--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -106,6 +106,7 @@ img.footer-icon-instagram {
     cursor: pointer;
   }
 }
+//планшет
 @media screen and (min-width: 768px) {
   .footer-address {
     padding-top: 40px;
@@ -172,6 +173,7 @@ img.footer-icon-instagram {
     margin-right: -5px;
   }
 }
+//десктоп
 @media screen and (min-width: 1344px) {
   .footer-address {
     padding-top: 52px;
