--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -8,12 +8,14 @@
   @media screen and (min-width: $desktop) {
     padding-top: 35px;
   }
-
   & .container {
-    position: relative;
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    @media screen and (min-width: $desktop) {
+      position: relative;
+    }
   }
 
   &__btn {
@@ -32,6 +34,15 @@
     background-color: transparent;
     border: 2px solid $accent-color;
     transition: all 250ms $transition-timing-function;
+
+    @media screen and (max-width: $tablet - 1) {
+      position: absolute;
+      width: 260px;
+      top: 300px;
+      left: 50%;
+      transform: translateX(-50%);
+      z-index: 900;
+    }
 
     @media screen and (min-width: $tablet) {
       display: flex;
@@ -113,8 +124,8 @@
   position: absolute;
   @media screen and (max-width: $desktop - 1) {
     display: none;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     padding: 110px 20px 0 20px;
     top: 0;
     left: 0;
@@ -148,8 +159,10 @@
     }
   }
 
-  &__item:not(:last-child) {
-    margin-right: 40px;
+  @media screen and (min-width: $desktop) {
+    &__item:not(:last-child) {
+      margin-right: 40px;
+    }
   }
 
   &__link {
@@ -193,6 +206,7 @@
 
   & ~ .header__btn {
     @media screen and (max-width: $tablet - 1) {
+      display: flex;
     }
   }
 }
