--- a/src/sass/components/_sale.scss
+++ b/src/sass/components/_sale.scss
@@ -33,10 +33,10 @@
 
   @media screen and (min-width: 1200px) {
     position: absolute;
-    top: 50px;
+    top: 100px;
     left: 0;
     right: 0;
-    max-width: 1600px;
+    width: 100%;
     pointer-events: none;
   }
 }
