--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -1219,10 +1219,10 @@ img {
 @media screen and (min-width: 1200px) {
   .bcg-img-sale {
     position: absolute;
-    top: 50px;
+    top: 100px;
     left: 0;
     right: 0;
-    max-width: 1600px;
+    width: 100%;
     pointer-events: none;
   }
 }
