Добавил падинг для импут заменил в ссылке для Лого в атрибуте href значение на якорь #top

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="footer__contact-wrapper">
 
-            <a class="footer__contact-logo-mobile" href="./index.html">
+            <a class="footer__contact-logo-mobile" href="#top">
 
                 <svg class="footer__contact-logo-icon">
                     <use href="./images/sprite.svg#logo--mobile"></use>
@@ -12,7 +12,7 @@
 
 
             </a>
-            <a class="footer__contact-logo-t-d" href="./index.html">
+            <a class="footer__contact-logo-t-d" href="#top">
 
                 <svg class="footer__contact-logo-icon">
                     <use href="./images/sprite.svg#logo"></use>
