--- a/src/sass/layout/_registration.scss
+++ b/src/sass/layout/_registration.scss
@@ -54,6 +54,8 @@
     margin-right: auto;
     margin-bottom: 20px;
     background-color: transparent;
+    padding-left: 28px;
+    color: var(--white-color);
   }
 
   &__form-label-input::placeholder {
@@ -64,7 +66,7 @@
     letter-spacing: 0.08em;
     padding-top: 15px;
     padding-bottom: 16px;
-    padding-left: 28px;
+    // padding-left: 28px;
 
     color: var(--white-color);
   }
