Заменяет марджины на падинги

--- a/src/sass/components/_comment.scss
+++ b/src/sass/components/_comment.scss
@@ -3,7 +3,7 @@
 }
 
 .comments {
-  margin-bottom: 50px;
+  padding-bottom: 50px;
 }
 
 .comments__wrapper {
@@ -137,15 +137,9 @@
   border: 2px solid var(--accent-color);
 }
 
-// .slick-dots {
-//   margin: 0 0 0 -30px;
-// }
-
 .slick-dots {
   margin: 0 auto;
 }
-
-// .slick-dots li.slick-active
 
 .comments__image {
   width: 90px;
@@ -195,10 +189,6 @@
     background-color: white;
     bottom: 0;
   }
-
-  //   .slider .slick-dots {
-  //     transition: transform 300ms linear;
-  //   }
 }
 
 @media screen and (min-width: 768px) {
@@ -284,7 +274,7 @@
   }
 
   .comments {
-    margin-bottom: 130px;
+    padding-bottom: 130px;
   }
 
   .slick-dots {
