--- a/src/sass/components/_waranty.scss
+++ b/src/sass/components/_waranty.scss
@@ -1,6 +1,6 @@
 .warranty {
-  margin-top: 50px;
-  margin-bottom: 50px;
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
 
 .warranty__list-container {
@@ -115,7 +115,7 @@
   }
 
   .warranty {
-    margin-top: 130px;
-    margin-bottom: 130px;
+    padding-top: 130px;
+    padding-bottom: 130px;
   }
 }
