--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -36,7 +36,6 @@
 
   &-logo {
     display: block;
-    z-index: 20;
 
     &-main {
       display: flex;
@@ -88,6 +87,12 @@
       height: 20px;
       margin: 0 4px;
     }
+  }
+
+  &-logo.menu-logo {
+    position: fixed;
+    top: 30px;
+    left: 20px;
   }
 
   &-menu-button {
@@ -146,17 +151,11 @@
 
     &.is-open {
       display: block;
-
-      // & .header-logo-name,
-      // & .header-logo-description {
-      //   color: $white-text-color;
-      // }
     }
   }
 
   &-menu-wrapper {
     margin: 0 auto;
-    max-width: 280px;
   }
 
   &-button {
@@ -184,50 +183,46 @@
   }
 }
 
-body.modal-open {
-  overflow: hidden;
-}
-
 @media screen and (min-width: 768px) {
   .header {
     padding-top: 40px;
 
-    &-logo {
-      &-main {
-        margin-bottom: 5px;
-      }
+    &-main {
+      margin-bottom: 5px;
+    }
 
-      &-name {
-        font-size: 26px;
-        line-height: 1.23;
-        letter-spacing: 0.04em;
-      }
+    &-name {
+      font-size: 26px;
+      line-height: 1.23;
+      letter-spacing: 0.04em;
+    }
 
-      &-fire {
-        width: 22px;
-        height: 30px;
-      }
+    &-fire {
+      width: 22px;
+      height: 30px;
+    }
+
+    &-first {
+      width: auto;
+      color: $white-text-color;
+    }
+
+    &-second {
+      width: auto;
+      color: $white-text-color;
+    }
+
+    &-description {
+      display: block;
+      height: auto;
+      width: auto;
+
+      font-size: 8px;
+      line-height: 1.25;
+      letter-spacing: 0.18em;
 
       &-first {
-        width: auto;
-      }
-
-      &-second {
-        width: auto;
-      }
-
-      &-description {
-        display: block;
-        height: auto;
-        width: auto;
-
-        font-size: 8px;
-        line-height: 1.25;
-        letter-spacing: 0.18em;
-
-        &-first {
-          color: $accent-text-color;
-        }
+        color: $accent-text-color;
       }
     }
 
@@ -237,11 +232,11 @@ body.modal-open {
 
     &-menu {
       &-container {
-        position: static;
         padding-top: 159px;
       }
+
       &-wrapper {
-        max-width: 378px;
+        max-width: 688px;
       }
     }
 
@@ -251,6 +246,18 @@ body.modal-open {
 
     &-button.is-hidden {
       display: block;
+    }
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1343px) {
+  .header {
+    &-buttons {
+      display: flex;
+      align-items: center;
+    }
+    &-menu-button {
+      margin-left: 40px;
     }
   }
 }
