--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -130,7 +130,7 @@
 .hero-btn {
   height: 24px;
   margin-top: 19px;
-  padding: 0 14px; // перепроверить падинг после подключения шрифтов
+  padding: 0 14px;
   border-radius: 20px;
   /*шрифты*/
   font-family: $main-font;
@@ -144,6 +144,18 @@
 
   @media screen and (min-width: 768px) {
     margin-top: 20px;
+  }
+
+  @media screen and (min-width: 1280px) {
+    margin-top: 25px;
+    height: 40px;
+    padding: 0 22px;
+    font-size: 14px;
+    line-height: 1.29;
+
+    &:last-child {
+      margin-left: 17px;
+    }
   }
 }
 
