--- a/src/partials/description.html
+++ b/src/partials/description.html
@@ -108,3 +108,12 @@
     </picture>
   </div>
 </section>
+
+<!-- Кнопка прокрутки вверх -->
+<p class="back-top">
+  <a class="back-top-arrow" href="#top">
+    <svg class="back-top-icon" width="20" height="20">
+      <use href="./images/svg/sprite.svg#icon-right-arrow"></use>
+    </svg>
+  </a>
+</p>
