--- a/src/sass/layout/_description.scss
+++ b/src/sass/layout/_description.scss
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 .description {
   background-color: #fff5f6;
 }
@@ -297,4 +301,28 @@
 .galery {
   position: absolute;
   transform: translate(0, -40%);
+}
+
+//========// Кнопка прокрутки вверх
+.back-top {
+  position: fixed;
+  bottom: 60px;
+  right: 30px;
+  z-index: 2;
+}
+.back-top-arrow {
+  width: 50px;
+  height: 50px;
+  display: block;
+  padding-top: 15px;
+  fill: white;
+  text-align: center;
+  border-radius: 50px;
+  background-color: #ffa5ba;
+  transform: rotate(0.75turn);
+  opacity: 0.25;
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.back-top-arrow:hover {
+  opacity: 1;
 }
