--- a/src/sass/components/_how-made.scss
+++ b/src/sass/components/_how-made.scss
@@ -1,4 +1,5 @@
 .how-made {
+	position: relative;
 	width: 100%;
 	margin-left: auto;
 	margin-right: auto;
@@ -79,7 +80,7 @@
 	}
 	@media screen and (min-width:1200px) {
 		width: 1050px;
-		position: relative;
+		// position: relative;
 		z-index: 5;
 		margin-bottom: 37px;
 		// padding: 0 42px 0 37px;
@@ -294,14 +295,14 @@
 }
 
 .how-made .container {
-	position: relative;
+	// position: relative;
 }
 
 .cow-spray-bg {
 	@media screen and (max-width:767px) {
 		position: absolute;
-		left: -20px;
-		top: 641px;
+		left: 0px;
+		top: 768px;
 		width: 320px;
 		height: 133px;
 	
@@ -319,8 +320,8 @@
 	@media screen and (min-width:1200px) {
 	
 		position: absolute;
-		left: -117px;
-		top: 217px;
+		left: -32px;
+		top: 349px;
 		width: 1282px;
 		height: 534px;
 	
