--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -89,11 +89,11 @@
     }
   }
 
-  &-logo.menu-logo {
-    position: fixed;
-    top: 30px;
-    left: 20px;
-  }
+  // &-logo.menu-logo {
+  //   position: fixed;
+  //   top: 30px;
+  //   left: 20px;
+  // }
 
   &-menu-button {
     display: inline-flex;
@@ -130,29 +130,52 @@
   &-icon {
     display: block;
     height: 15px;
+    z-index: 10;
 
     fill: black;
   }
 
-  &-menu-container {
-    display: none;
-    position: absolute;
-    top: 0;
-    left: 0;
+  @media screen and (max-width: 1343px) {
+    &-menu-container {
+      display: none;
+      position: absolute;
+      top: 0;
+      left: 0;
 
-    width: 100vw;
-    height: 100vh;
-    padding: 108px 20px 0px 20px;
+      width: 100vw;
+      height: 100vh;
+      padding: 108px 20px 0px 20px;
 
-    overflow-y: scroll;
-    z-index: 1;
+      overflow-y: scroll;
+      z-index: 1;
 
-    background-color: rgba(17, 21, 24, 0.9);
+      background-color: rgba(17, 21, 24, 0.9);
 
-    &.is-open {
-      display: block;
+      &.is-open {
+        display: block;
+      }
     }
   }
+
+  // &-menu-container {
+  //   display: none;
+  //   position: absolute;
+  //   top: 0;
+  //   left: 0;
+
+  //   width: 100vw;
+  //   height: 100vh;
+  //   padding: 108px 20px 0px 20px;
+
+  //   overflow-y: scroll;
+  //   z-index: 1;
+
+  //   background-color: rgba(17, 21, 24, 0.9);
+
+  //   &.is-open {
+  //     display: block;
+  //   }
+  // }
 
   &-menu-wrapper {
     margin: 0 auto;
@@ -246,6 +269,7 @@
 
     &-button.is-hidden {
       display: block;
+      margin: 0;
     }
   }
 }
@@ -270,6 +294,18 @@
       margin-right: 144px;
     }
 
+    &-menu {
+      &-container {
+        display: block;
+        padding-top: 0px;
+      }
+
+      &-wrapper {
+        display: flex;
+        max-width: 100%;
+      }
+    }
+
     &-menu-button {
       display: none;
     }
@@ -282,17 +318,23 @@
       display: none;
     }
 
-    &-menu-conatainer {
-      position: static;
-      display: block;
+    &-navigation {
+      &-list {
+        display: flex;
+        align-items: center;
 
-      width: 100%;
-      height: 70px;
-      padding: 0;
+        margin-right: 60px;
+        margin-bottom: 0px;
+      }
 
-      background-color: tomato;
+      &-item {
+        display: block;
+
+        &:not(:last-child) {
+          margin-right: 40px;
+        }
+      }
     }
-
     &-navigation-page {
       font-weight: bold;
       font-style: normal;
