Делает тень и меняет цвет контактов

--- a/src/partials/location.html
+++ b/src/partials/location.html
@@ -1,105 +1,103 @@
-<section class="section-location" is="location">
-  <div class="container">
+<section class="section-location" id="location">
+  <div class="container location-posishon">
     <h2 class="visually-hidden">location</h2>
-    <div class="location-posishon">
-      <ul class="list list-location">
-        <li class="card">
-          <div class="label-box">
-            <span class="label label-cafe">cafe</span>
-          </div>
-          <div class="card-box">
-            <h3 class="title-card-location">Chicago</h3>
-            <p class="description">
-              Fusce ut velit laoreet, tempus arcu molestie vulputate
-            </p>
-          </div>
-          <div class="card-box">
-            <span class="work-time"
-              ><span class="work-day">Monday - Friday</span>06:00 AM - 10:00
-              PM</span
-            >
+    <ul class="list list-location">
+      <li class="card">
+        <div class="label-box">
+          <span class="label label-cafe">cafe</span>
+        </div>
+        <div class="card-box">
+          <h3 class="title-card-location">Chicago</h3>
+          <p class="description">
+            Fusce ut velit laoreet, tempus arcu molestie vulputate
+          </p>
+        </div>
+        <div class="card-box">
+          <span class="work-time"
+            ><span class="work-day">Monday - Friday</span>06:00 AM - 10:00
+            PM</span
+          >
 
-            <span class="work-time"
-              ><span class="work-day">Saturday - Sunday</span> 08:00 AM -
-              16:00PM</span
-            >
-          </div>
-          <div class="card-box">
-            <a class="link contact" href="tel:+610383766284"
-              >+61(0) 383 766 284</a
-            >
-            <a class="link contact" href="mailto:noreply@envato.com"
-              >noreply@envato.com</a
-            >
-          </div>
-        </li>
-        <li class="card">
-          <div class="label-box">
-            <span class="label label-food-truck">food truck</span>
-          </div>
-          <div class="card-box">
-            <h3 class="title-card-location">Los Angeles</h3>
-            <p class="description">
-              Fusce ut velit laoreet, tempus arcu molestie vulputate
-            </p>
-          </div>
-          <div class="card-box">
-            <span class="work-time"
-              ><span class="work-day">Monday - Friday</span>06:00 AM - 10:00
-              PM</span
-            >
+          <span class="work-time"
+            ><span class="work-day">Saturday - Sunday</span> 08:00 AM -
+            16:00PM</span
+          >
+        </div>
+        <div class="card-box">
+          <a class="link contact" href="tel:+610383766284"
+            >+61(0) 383 766 284</a
+          >
+          <a class="link contact" href="mailto:noreply@envato.com"
+            >noreply@envato.com</a
+          >
+        </div>
+      </li>
+      <li class="card">
+        <div class="label-box">
+          <span class="label label-food-truck">food truck</span>
+        </div>
+        <div class="card-box">
+          <h3 class="title-card-location">Los Angeles</h3>
+          <p class="description">
+            Fusce ut velit laoreet, tempus arcu molestie vulputate
+          </p>
+        </div>
+        <div class="card-box">
+          <span class="work-time"
+            ><span class="work-day">Monday - Friday</span>06:00 AM - 10:00
+            PM</span
+          >
 
-            <span class="work-time"
-              ><span class="work-day">Saturday - Sunday</span> 08:00 AM -
-              16:00PM</span
-            >
-          </div>
-          <div class="card-box">
-            <a class="link contact" href="tel:+610383766284"
-              >+61(0) 383 766 284</a
-            >
-            <a class="link contact" href="mailto:noreply@envato.com"
-              >noreply@envato.com</a
-            >
-          </div>
-        </li>
-        <li class="card">
-          <div class="label-box">
-            <span class="label label-cafe">cafe</span>
-          </div>
-          <div class="card-box">
-            <h3 class="title-card-location">New York</h3>
-            <p class="description">
-              Fusce ut velit laoreet, tempus arcu molestie vulputate
-            </p>
-          </div>
-          <div class="card-box">
-            <span class="work-time"
-              ><span class="work-day">Monday - Friday</span>06:00 AM - 10:00
-              PM</span
-            >
+          <span class="work-time"
+            ><span class="work-day">Saturday - Sunday</span> 08:00 AM -
+            16:00PM</span
+          >
+        </div>
+        <div class="card-box">
+          <a class="link contact" href="tel:+610383766284"
+            >+61(0) 383 766 284</a
+          >
+          <a class="link contact" href="mailto:noreply@envato.com"
+            >noreply@envato.com</a
+          >
+        </div>
+      </li>
+      <li class="card">
+        <div class="label-box">
+          <span class="label label-cafe">cafe</span>
+        </div>
+        <div class="card-box">
+          <h3 class="title-card-location">New York</h3>
+          <p class="description">
+            Fusce ut velit laoreet, tempus arcu molestie vulputate
+          </p>
+        </div>
+        <div class="card-box">
+          <span class="work-time"
+            ><span class="work-day">Monday - Friday</span>06:00 AM - 10:00
+            PM</span
+          >
 
-            <span class="work-time"
-              ><span class="work-day">Saturday - Sunday</span> 08:00 AM -
-              16:00PM</span
-            >
-          </div>
-          <div class="card-box">
-            <a class="link contact" href="tel:+610383766284"
-              >+61(0) 383 766 284</a
-            >
-            <a class="link contact" href="mailto:noreply@envato.com"
-              >noreply@envato.com</a
-            >
-          </div>
-        </li>
-      </ul>
-      <div class="button-box-location">
-        <button class="button button-location" data-modal-map-open>
-          Our Locations
-        </button>
-        <button class="button-secondary button-Franchise">Franchise</button>
-      </div>
+          <span class="work-time"
+            ><span class="work-day">Saturday - Sunday</span> 08:00 AM -
+            16:00PM</span
+          >
+        </div>
+        <div class="card-box">
+          <a class="link contact" href="tel:+610383766284"
+            >+61(0) 383 766 284</a
+          >
+          <a class="link contact" href="mailto:noreply@envato.com"
+            >noreply@envato.com</a
+          >
+        </div>
+      </li>
+    </ul>
+    <div class="button-box-location">
+      <button class="button button-location" data-modal-map-open>
+        Our Locations
+      </button>
+      <button class="button-secondary button-Franchise">Franchise</button>
     </div>
   </div>
   <div class="backdrop-modal-map is-hidden" data-modal-map>
