--- a/src/sass/components/_modal-map.scss
+++ b/src/sass/components/_modal-map.scss
@@ -6,7 +6,7 @@
   width: 100%;
   height: 100%;
 
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgba(0, 0, 0, 0.2);
 
   transition: 500ms;
 }
@@ -19,6 +19,7 @@
 
   background-color: $primaryWhiteColor;
   border-radius: 5px;
+  box-shadow: 7px 8px 25px 1px rgba(255, 0, 0, 0.25);
 
   transform: translate(-50%, -50%);
 
@@ -27,6 +28,8 @@
     left: 50%;
     width: 70vw;
     height: 40vw;
+
+    box-shadow: 7px 8px 25px 1px rgba(255, 0, 0, 0.44);
 
     transform: translate(-50%, -50%);
   }
