--- a/src/sass/layouts/_location.scss
+++ b/src/sass/layouts/_location.scss
@@ -25,6 +25,14 @@
   margin-top: -20px;
   margin-bottom: 54px;
 
+  & .card:hover {
+    box-shadow: $shadowcolor;
+  }
+
+  & .contact:hover {
+    color: $titleTextColor;
+  }
+
   @include for-size(tablet) {
     display: flex;
     flex-wrap: wrap;
