--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -24,3 +24,6 @@ $labelFoodtrukcolor: #c2e297;
 
 // цвет для полоски в карточках локации
 $locationBandcolor: #e1e1e1;
+
+// цвет тени
+$shadowcolor: 7px 8px 25px 1px rgba(255, 0, 0, 0.44);
