--- a/src/sass/components/_components.scss
+++ b/src/sass/components/_components.scss
@@ -12,11 +12,11 @@
   text-transform: uppercase;
   color: var(--text-red-color);
 
-  @media screen and (min-width: 768px) {
+  @include for-size(tablet) {
     font-size: 48px;
   }
 
-  @media screen and (min-width: 1200px) {
+  @include for-size(desktop) {
     font-size: 58px;
     line-height: 1.14;
     letter-spacing: 0.06em;
@@ -33,12 +33,12 @@
   text-transform: uppercase;
   color: var(--text-pink-color);
 
-  @media screen and (min-width: 768px) {
+  @include for-size(tablet) {
     font-size: 26px;
     line-height: 1.15;
   }
 
-  @media screen and (min-width: 1200px) {
+  @include for-size(desktop) {
     font-size: 30px;
     line-height: 1.13;
     letter-spacing: 0.04em;
@@ -93,11 +93,11 @@
     width: 100%;
   }
 
-  @media screen and (min-width: 768px) {
+  @include for-size(tablet) {
     padding: 0 30px;
   }
 
-  @media screen and (min-width: 1200px) {
+  @include for-size(desktop) {
     padding: 0 37px;
   }
 }
