Добавлены точки и все выровняно

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,15 +1,17 @@
 <!-- Products section -->
 
-<section class="products">
+<section class="products" id="products">
   <div class="container">
-    <h3 class="subtitle">100% natural</h3>
+    <h3 class="subtitle products-subtitle">100% natural</h3>
     <h2 class="title">products</h2>
     <ul class="products-list list">
       <li class="products-list-item pink-theme">
         <h3 class="products-list-name">ice cream</h3>
-        <svg class="" width="6" height="6">
-          <use class="link" href="./images/icons/circle.svg"></use>
-        </svg>
+        <img
+          class="products-list-img"
+          src="./images/icons/Group-3.png"
+          alt="..."
+        />
         <p class="products-item-description">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
           eiusmod tempor incididunt ut labore et
@@ -19,9 +21,11 @@
 
       <li class="products-list-item yellow-theme">
         <h3 class="products-list-name">ice coffee</h3>
-        <svg class="" width="6" height="6">
-          <use class="link" href="./images/icons/circle.svg"></use>
-        </svg>
+        <img
+          class="products-list-img"
+          src="./images/icons/Group-3.png"
+          alt="..."
+        />
         <p class="products-item-description">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
           eiusmod tempor incididunt ut labore et
@@ -31,9 +35,11 @@
 
       <li class="products-list-item green-theme">
         <h3 class="products-list-name">milkshakes</h3>
-        <svg class="" width="6" height="6">
-          <use class="link" href="./images/icons/circle.svg"></use>
-        </svg>
+        <img
+          class="products-list-img"
+          src="./images/icons/Group-3.png"
+          alt="..."
+        />
         <p class="products-item-description">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
           eiusmod tempor incididunt ut labore et
