--- a/src/sass/layout/_feedback.scss
+++ b/src/sass/layout/_feedback.scss
@@ -114,13 +114,13 @@ font-size: 26px;
   overflow: hidden;
   background: #ffffff;
   box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
-  margin-bottom: 20px;
-  margin: 0 auto;
+  margin: 0 auto 20px;
 
   @media screen and(min-width:768px) {
     width: 688px;
     height: 313px;
     padding: 40px;
+    margin: 0 auto 30px;
   }
 
   @media screen and (min-width: 1344px) {
@@ -130,9 +130,13 @@ font-size: 26px;
     padding-left: 82px;
     padding-right: 112px;
     padding-bottom: 50px;
-    margin-bottom: 40px;
+    margin: 0 auto 40px;
   }
 }
+
+// .slick-track{
+//   transform: translate3d(82px, 0px, 0px) !important;
+// }
 
 .feedback-nav {
   width: 180px;
@@ -174,6 +178,10 @@ font-size: 26px;
   margin-bottom: 20px;
 
   @media screen and(min-width:768px) {
+    width: 150px;
+  }
+
+  @media screen and(min-width:1344px) {
     width: 150px;
   }
 }
@@ -221,6 +229,7 @@ font-size: 26px;
   opacity: 1;
   color: var(--accent-color);
 }
+
 .slick-prev {
   left: -50px;
 
@@ -232,6 +241,7 @@ font-size: 26px;
     left: -350px;
   }
 }
+
 .slick-next {
   right: -38px;
 
