--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -37,7 +37,12 @@
 
         </div>
     </div>
-
-
-    <span class="footer__copyrite">&copy; Все права защищены, 2019</span>
 </section>
+
+<section class="footer__copyrite-wrapper">
+    <div class="container">
+<span class="footer__copyrite">&copy; Все права защищены, 2019</span>
+    </div>
+  
+</section>
+    
