Улаляет лишнии иконки

--- a/src/sass/layout/_our-program.scss
+++ b/src/sass/layout/_our-program.scss
@@ -219,7 +219,7 @@
 @media screen and (min-width: 1344px){
   .our-program{
     padding-top: 120px;
-    padding-bottom: 270px;
+    padding-bottom: 325px;
 }
 
   .our-program-title{
@@ -278,7 +278,6 @@
       width: 760px;
       height: 502px;
     }
-
 }
 
 
@@ -407,6 +406,7 @@ li {
     }
 
     .why-we-choose-description {
+      top: 880px;
       width: 1314px;
       height: 430px;
       padding: 70px 82px 70px 84px;
@@ -438,7 +438,7 @@ li {
       font-size: 20px;
       line-height: 1.2;
       letter-spacing: 0.08em;
-      width: 336px;
+      width: 356px;
     }
   
     .why-we-choose-set-item-list {
