--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -24,7 +24,7 @@
             </div>
             <div class="header-menu-container" id="header-menu-container" data-menu>
                 <div class="header-menu-wrapper container">
-                    <!-- <a class="header-logo link menu-logo" href="index.html">
+                    <a class="header-logo link menu-logo" href="index.html">
                         <div class="header-logo-main">
                             <span class="header-logo-name header-logo-first" lang="EN">Hell</span>
                             <svg class="header-logo-fire">
@@ -33,7 +33,7 @@
                             <span class="header-logo-name header-logo-second" lang="EN">EN</span>
                         </div>
                         <div class="header-logo-description"><span class="header-logo-description-first">адский </span>английский</div>
-                    </a> -->
+                    </a>
                     <ul class="header-navigation-list list">
                     <li class="header-navigation-item">
                         <a class="header-navigation-page link" href="index.html">программы обучения</a>
