--- a/src/sass/layout/_teacher.scss
+++ b/src/sass/layout/_teacher.scss
@@ -1,3 +1,15 @@
+.teachers {
+    padding-top: 270px;
+    padding-bottom: 50px; 
+
+    @media screen and (min-width: 768px) {
+    padding-top: 302px; }
+
+   @media screen and (min-width: 1344px) {
+   padding-top: 329px;
+   padding-bottom: 130 px;
+    }
+}
 .teachers_title {
     font-family: Montserrat;
     font-weight: 800;
