--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -36,7 +36,7 @@
                     </a>
                     <ul class="header-navigation-list list">
                     <li class="header-navigation-item">
-                        <a class="header-navigation-page link" href="index.html">программы обучения</a>
+                        <a class="header-navigation-page link" href="#our-program">программы обучения</a>
                     </li>
                     <li class="header-navigation-item"">
                         <a class=" header-navigation-page link" href="#">о нас</a>
