section media fixes

--- a/src/sass/layout/_review.scss
+++ b/src/sass/layout/_review.scss
@@ -1,35 +1,83 @@
 .review {
-  // width: 320px;
-  padding-top: 80px;
+  width: 480px;
+  padding-top: 154px;
   padding-bottom: 83px;
 }
 
 .review-wrapper {
+  width: 280px;
+  padding: 43px 50px 57px;
   background-color: var(--slider-background-color);
   margin-top: 29px;
   margin-bottom: 52px;
 }
 
 .review-text {
-  padding: 43px 66px 26px 57px;
   font-weight: 500;
   font-size: 12px;
   line-height: 2.58;
   text-align: center;
   color: #000000;
-}
-
-.review-text-line::after {
-  content: '';
-  display: block;
-  width: 180px;
-  border-bottom: 1px solid #000;
-}
-
-.review-text-line {
-  display: block;
+  padding-left: 0px;
+  padding-right: 0px;
+  background-image: repeating-linear-gradient(
+    to top,
+    #e1e1e1 0px 1px,
+    transparent 1px 35px
+  );
 }
 
 .review-name {
   text-align: center;
+}
+
+@media screen and (min-width: 768px) {
+  .review .container {
+    width: 768px;
+  }
+
+  .review {
+    padding-top: 238px;
+  }
+
+  .review-wrapper {
+    width: 620px;
+    margin: 19px auto 42px;
+  }
+
+  .review-wrapper-text {
+    padding: 47px 60px 27px;
+  }
+
+  .review-text {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 216%;
+    text-align: center;
+    letter-spacing: 0.04em;
+    padding: 0 24px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .review .container {
+    width: 1200px;
+  }
+
+  .review {
+    padding-top: 339px;
+  }
+
+  .review-wrapper {
+    width: 926px;
+  }
+
+  .review-text {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 186%;
+    text-align: center;
+    letter-spacing: 0.04em;
+    padding: 0 4px;
+  }
 }
