--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -19,7 +19,7 @@
     </nav>
     <a class="header-button" href="#">консультация по телефону</a>
 
-    <svg class="nav-menu-btn" data-modal-open>
+    <svg data-modal-open class="nav-menu-btn">
       <use href="./images/sprite.svg#nav-menu"></use>
     </svg>
   </div>
