header-menu-animation
new menu.js
rework open/close btn -> divided on 2 different btns
rework menu animation

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -5,25 +5,16 @@
     </a>
 
     <!-- mobile/tablet menu-button -->
-    <button
-      type="button"
-      class="menu-button"
-      aria-expanded="false"
-      aria-controls="menu-container"
-      data-menu-button
-    >
+    <button class="menu-button" data-menu-button>
       <svg width="20" height="20" aria-label="Переключатель мобильного меню">
-        <use
-          class="icon-cross"
-          href="./images/icon/sprite.svg#icon-mobile-close"
-        ></use>
         <use
           class="icon-menu"
           href="./images/icon/sprite.svg#icon-mobile-menu"
         ></use>
       </svg>
     </button>
-    <!-- ===================== -->
+
+    <!-- navigation -->
     <nav class="header-nav">
       <ul class="nav-list">
         <li class="nav-item">
@@ -53,9 +44,20 @@
       </button>
     </div>
   </div>
-  <!-- mobile/tablet menu -->
 
+  <!-- mobile/tablet menu -->
   <div class="menu-container" id="menu-container" data-menu>
+    <!-- btn close menu -->
+    <button class="menu-button-close" data-menu-close>
+      <svg width="20" height="20" aria-label="Переключатель мобильного меню">
+        <use
+          class="icon-cross"
+          href="./images/icon/sprite.svg#icon-mobile-close"
+        ></use>
+      </svg>
+    </button>
+    <!-- ========= -->
+
     <button type="button" class="mob-menu-btn btn appeal-two">
       Buy now
       <svg class="btn-icon next-two">
