--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -29,11 +29,26 @@
     font-size: 16px;
   }
 }
+.logo {
+  flex-grow: 1;
+}
 
 .menu-button {
-  z-index: 12;
-  // top: 15px;
-  // right: 20px;
+  background-size: cover;
+  background-color: transparent;
+  stroke: var(--text-red-color);
+  margin: 0;
+  padding: 0;
+  border: none;
+}
+
+.menu-button-close {
+  z-index: 13;
+  position: absolute;
+  top: 15px;
+  right: -220px;
+
+  transition: all 1000ms cubic-bezier(0.4, 0, 0.2, 1);
 
   background-size: cover;
   background-color: transparent;
@@ -41,16 +56,7 @@
   margin: 0;
   padding: 0;
   border: none;
-
-  &.is-open {
-    top: 15px;
-    right: 20px;
-    position: absolute;
-  }
-}
-
-.logo {
-  flex-grow: 1;
+  stroke: white;
 }
 
 .menu-container {
@@ -58,9 +64,10 @@
   position: absolute;
 
   top: 0;
-  right: -80%;
-  max-width: 250px;
-  width: 100%;
+  right: 0;
+  width: 0;
+  overflow: hidden;
+
   height: 100vh;
   padding-top: 60px;
   background-color: var(--menu-mob-bg-color);
@@ -70,16 +77,19 @@
     display: flex;
     flex-direction: column;
     right: 0;
+    width: 250px;
     transition: all 1000ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    .menu-button-close {
+      right: 20px;
+    }
   }
 
   @media screen and (min-width: 768px) {
-    min-width: 40%;
+    &.is-open {
+      width: 40%;
+    }
   }
-
-  // @media screen and (max-width: 1279px) {
-  //   display: none;
-  // }
 }
 
 @media screen and (min-width: 1280px) {
@@ -105,35 +115,7 @@
   }
 }
 
-// button: open/close===============
-.icon-cross {
-  stroke: white;
-
-  .menu-button & {
-    opacity: 0;
-    // transition: all 1250ms cubic-bezier(0.4, 0, 0.2, 1);
-    // display: none;
-  }
-  .menu-button.is-open & {
-    opacity: 1;
-
-    transition: all 1250ms cubic-bezier(0.4, 0, 0.2, 1);
-    // display: block;
-  }
-}
-
-.icon-menu {
-  .menu-button.is-open & {
-    opacity: 0;
-    // transition: all 1250ms cubic-bezier(0.4, 0, 0.2, 1);
-    // display: none;
-  }
-}
 // <!-- ========= descktop header ============ -->
-.animate__fadeIn {
-  transition: all 1250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-// ==============================
 
 .nav-list {
   display: flex;
@@ -160,6 +142,7 @@
 }
 
 .mob-menu-item {
+  min-width: 250px;
   padding-top: 13px;
   padding-bottom: 11px;
   padding-left: 21px;
@@ -168,15 +151,19 @@
 }
 
 .mob-menu-btn {
+  max-width: 200px;
+  min-width: 190px;
+
   margin-left: 21px;
   margin-bottom: 19px;
-  max-width: 200px;
-  justify-content: center;
+  padding-left: 50px;
+  align-items: center;
 }
 
 @media screen and (min-width: 768px) {
   .mob-menu-item {
     padding-left: 24px;
+    min-width: 254px;
   }
   .mob-menu-btn {
     margin-left: 24px;
@@ -192,14 +179,3 @@
     color: var(--text-red-color);
   }
 }
-// ==============
-
-// .menu-container {
-//   transform: translateX(-100%);
-//   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
-// }
-
-// .menu-container.is-open {
-//   transform: translateX(0);
-//   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
-// }
