--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -37,7 +37,7 @@
     <nav class="menu-nav">
       <ul class="nav-list">
         <li class="nav-list-item">
-          <a class="nav-link" href="#">Программы обучения</a>
+          <a class="nav-link" href="#">Программыыыыы обучения</a>
         </li>
         <li class="nav-list-item"><a class="nav-link" href="#">О нас</a></li>
         <li class="nav-list-item">
