--- a/src/sass/layout/_locations.scss
+++ b/src/sass/layout/_locations.scss
@@ -110,7 +110,7 @@
 @media screen and (max-width: 767px) {
 
     .btn {
-        min-width: 161px;
+        justify-content: center;
     }
 
     .btn:not(:last-child) {
