--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -39,8 +39,8 @@
 
     &.menu-logo {
       position: absolute;
-      top: -80px;
-      left: 20px;
+      top: -78px;
+      left: 0px;
       z-index: 20;
 
       & .header-logo-name,
@@ -189,6 +189,8 @@
 
   &-menu-wrapper {
     position: relative;
+    max-width: 280px;
+    padding: 0px;
   }
 
   &-button {
@@ -209,6 +211,13 @@
     text-align: center;
     letter-spacing: 0.08em;
     text-transform: uppercase;
+
+    &:hover,
+    &:focus {
+      color: $white-text-color;
+      background-color: $accent-text-color;
+      transition: $animation;
+    }
 
     &.is-hidden {
       display: none;
@@ -279,6 +288,7 @@
       &-wrapper {
         position: relative;
         max-width: 688px;
+        padding: 0;
       }
     }
 
@@ -321,7 +331,7 @@
 
       &-wrapper {
         display: flex;
-        max-width: 100%;
+        max-width: 1044px;
       }
     }
 
